<resources>
    <string name="app_name">TSE App</string>
    <string name="tse">"TSE "</string>
    <string name="email">Correo electronico</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellido</string>
    <string name="confirm_password">Repetir contraseña</string>
    <string name="sign_up">Registrarse</string>
    <string name="warning">Advertencia</string>
    <string name="accept_btn">Ok</string>
    <string name="details_message">Detalle:</string>
    <string name="warning_message">¡Algo a salido mal, intentalo de nuevo!</string>
    <string name="no_match_pass">Contraseñas no coinciden</string>
    <string name="no_regex_matches">La contraseña debe ser de 8 caracteres, alfanumérica y al menos una mayúscula y un carácter especial</string>
    <string name="user_exists">El correo ya está siendo usado por otra cuenta</string>
    <string name="message_error_login">Hubo un error al iniciar sesión, inténtelo de nuevo</string>
    <string name="empty_fields">Campos vacíos</string>
    <string name="categorias">Actas</string>
    <string name="update">Actualizar</string>
    <string name="log_out">Cerrar Sesion</string>
    <string name="consolidado">Consolidados de actas</string>
    <string name="hint_search">Buscar</string>
    <string name="todas_las_actas">Todas las Actas</string>
</resources>