<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".views.SingUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:textColorHint="#FFFFFF"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/TextErrorMessages"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:passwordToggleTint="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#FFFFFF"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="12dp"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:paddingBottom="20dp"
                android:textColor="#edf2f8"
                android:textColorHint="#FFFFFF"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_surname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:textColorHint="#FFFFFF"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/TextErrorMessages"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_name"
            app:passwordToggleTint="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_surname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#FFFFFF"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="12dp"
                android:hint="@string/surname"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:paddingBottom="20dp"
                android:textColor="#edf2f8"
                android:textColorHint="#FFFFFF"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:textColorHint="#FFFFFF"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/TextErrorMessages"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_surname"
            app:passwordToggleTint="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#FFFFFF"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="12dp"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingBottom="20dp"
                android:textColor="#edf2f8"
                android:textColorHint="#FFFFFF"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:textColorHint="#FFFFFF"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/TextErrorMessages"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_email"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#FFFFFF"
                android:drawableStart="@drawable/ic_key"
                android:drawablePadding="12dp"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="8"
                android:paddingBottom="20dp"
                android:textColor="#edf2f8"
                android:textColorHint="#FFFFFF"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_confirm_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:textColorHint="#FFFFFF"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/TextErrorMessages"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#FFFFFF"
                android:drawableStart="@drawable/ic_key"
                android:drawablePadding="12dp"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingBottom="20dp"
                android:maxLength="8"
                android:textColor="#edf2f8"
                android:textColorHint="#FFFFFF"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_style"
            android:padding="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_confirm_password" />


        <ProgressBar
            android:id="@+id/progress_bar_sign_up"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/btn_sign_up"
            app:layout_constraintEnd_toEndOf="@id/btn_sign_up"
            app:layout_constraintStart_toStartOf="@id/btn_sign_up"
            app:layout_constraintTop_toTopOf="@+id/btn_sign_up" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
