<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".views.MainActivity"
    tools:showIn="@layout/activity_main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBarMain"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/btn_login"
            app:layout_constraintEnd_toEndOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="@id/btn_login"
            app:layout_constraintTop_toTopOf="@+id/btn_login" />

        <LinearLayout
            android:id="@+id/title_app"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_129sdp"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guideline">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:text="@string/tse"
                android:gravity="center"
                android:textColor="#fff"
                android:textSize="@dimen/_48sdp"
                android:fontFamily="@font/caviar_dream"
                android:textStyle="bold" />
            <View
                android:id="@+id/view_gallery"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="20dp"
                android:background="#A3A3A3"/>



        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutCorreo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:textColorHint="#FFFFFF"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/TextErrorMessages"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            app:passwordToggleTint="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_usuario"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#FFFFFF"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="12dp"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:paddingBottom="20dp"
                android:textColor="#edf2f8"
                android:textColorHint="#FFFFFF"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:textColorHint="#FFFFFF"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/TextErrorMessages"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCorreo"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:drawableStart="@drawable/ic_key"
                android:drawablePadding="12dp"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingBottom="20dp"
                android:textColor="#edf2f8"
                android:textColorHint="#FFFFFF"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="64dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="64dp"
            android:background="@drawable/button_style"
            android:padding="15dp"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="#FFF"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.30" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>